[package]
name = "cargo-barley"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
cargo_toml = "0.15.2"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"

[workspace]
members = [
  "barley-runtime",
  "barley-utils",
  "barley-proc",
  "barley-interface",
  "examples"
]
