[package]
name = "barley-proc"
description = "A proc-macro crate for Barley"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panthios/barley"
homepage = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-proc"
readme = "README.md"
keywords = ["barley", "proc-macro"]
version = "0.3.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.57"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["full"] }
