[package]
name = "barley-runtime"
description = "The Barley runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panthios/barley"
homepage = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-runtime"
readme = "README.md"
keywords = ["barley", "runtime", "context", "scripting"]
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
barley-proc = "0.0.1"
uuid = { version = "1.3.3", features = ["v4"] }
