[package]
name = "barley-runtime"
description = "The Barley runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panthios/barley"
homepage = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-runtime"
readme = "README.md"
keywords = ["barley", "runtime", "context", "scripting"]
version = "0.6.1"
edition = "2021"

[features]
default = ["async"]
next = []
blocking = []
async = ["dep:tokio", "dep:async-trait", "dep:futures"]

[dependencies]
async-trait = { version = "0.1.68", optional = true }
tokio = { version = "1.28.1", features = ["sync", "rt", "time"], optional = true }
uuid = { version = "1.3.3", features = ["v4"] }
futures = { version = "0.3.28", optional = true }
thiserror = "1.0.40"
tracing = "0.1.37"
cfg-if = "1.0.0"
