[package]
name = "barley-std"
description = "The Barley standard library"
homepage = "https://github.com/panthios/barley"
repository = "https://github.com/panthios/barley"
docs = "https://docs.rs/barley-std"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["barley", "standard", "library"]
version = "0.2.0"
edition = "2021"
exclude = ["examples/*", "tests/*", "benches/*"]

[dependencies]
anyhow = "1.0.71"
barley-runtime = { version = "0.4.0", path = "../barley-runtime" }
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["time", "fs"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
