[package]
name = "barley-std"
description = "The Barley standard library"
homepage = "https://github.com/panthios/barley"
repository = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-std"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["barley", "standard", "library"]
version = "0.3.0"
edition = "2021"
exclude = ["examples/*", "tests/*", "benches/*"]

[dependencies]
barley-runtime = { version = "0.5.1", path = "../barley-runtime" }
futures = "0.3.28"
tokio = { version = "1.28.2", optional = true }

[features]
time = ["dep:tokio", "tokio?/time"]
fs = ["dep:tokio", "tokio?/fs"]
process = ["dep:tokio", "tokio?/process"]

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
