[package]
name = "barley-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-process = { version = "1.7.0", optional = true }
async-trait = "0.1.68"
barley-runtime = { path = "../barley-runtime" }
reqwest = { version = "0.11.17", optional = true }
tokio = { version = "1.28.1", optional = true }

[features]
default = ["full"]
full = ["time", "fs", "io", "http", "process"]
tokio = ["dep:tokio"]
reqwest = ["dep:reqwest", "tokio"]
time = ["tokio?/time", "tokio"]
fs = ["tokio?/fs", "io", "tokio"]
io = ["tokio?/io-util", "tokio"]
http = ["reqwest", "tokio"]
process = ["dep:async-process", "tokio"]

[dev-dependencies]
tokio = { version = "1.28.1", features = ["test-util", "macros"] }
