[package]
name = "barley-utils"
description = "Utilities for the Barley engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panthios/barley"
homepage = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-utils"
readme = "README.md"
keywords = ["barley", "utils", "utilities", "engine"]
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-process = { version = "1.7.0", optional = true }
async-trait = "0.1.68"
barley-runtime = { version = "0.0.1", path = "../barley-runtime" }
reqwest = { version = "0.11.17", optional = true }
tokio = { version = "1.28.1", optional = true }

[features]
full = ["time", "fs", "io", "http", "process"]
tokio = ["dep:tokio"]
reqwest = ["dep:reqwest", "tokio"]
time = ["tokio?/time", "tokio"]
fs = ["tokio?/fs", "io", "tokio"]
io = ["tokio?/io-util", "tokio"]
http = ["reqwest", "tokio"]
process = ["dep:async-process", "tokio"]

[dev-dependencies]
tokio = { version = "1.28.1", features = ["test-util", "macros"] }
