[package]
name = "barley-utils"
description = "Utilities for the Barley engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panthios/barley"
homepage = "https://github.com/panthios/barley"
documentation = "https://docs.rs/barley-utils"
readme = "README.md"
keywords = ["barley", "utils", "utilities", "engine"]
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
barley-runtime = { version = "0.2.0", path = "../barley-runtime" }
reqwest = { version = "0.11.17", optional = true }
tokio = "1.28.1"

[features]
full = ["time", "fs", "io", "http", "process"]
reqwest = ["dep:reqwest"]
time = ["tokio/time"]
fs = ["tokio/fs", "io"]
io = ["tokio/io-util"]
http = ["reqwest"]
process = ["tokio/process"]

[dev-dependencies]
tokio = { version = "1.28.1", features = ["test-util", "macros"] }
