[package]
name = "examples"
version = "0.0.1"
edition = "2021"

[dependencies]
barley-runtime = { path = "../barley-runtime" }
barley-utils = { path = "../barley-utils", features = ["full"] }
barley-interface = { path = "../barley-interface" }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
